--- a/src/swagger_codegen/templates/package_renderer/dto.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/dto.jinja2
@@ -1,5 +1,5 @@
 class {{ type.python_type }}(BaseModel):
-{%- for member in type.members %}
+{%- for member in type.members|sort(attribute='member_name') %}
     {{ member.member_name }}: {{ member.member_python_type }} {% if member.member_value %} = {{ member.member_value }}{% endif %}
 {%- endfor %}
 {% if type.should_update_forward_refs() %}
