--- a/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
@@ -7,4 +7,5 @@ import typing
 
 from pydantic import BaseModel
 
+from swagger_codegen.api.base import BaseApi
 from swagger_codegen.api.request import ApiRequest
