--- a/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
@@ -7,5 +7,5 @@ import typing
 
 from pydantic import BaseModel
 
-from swagger_codegen.api.base import BaseApi
-from swagger_codegen.api.request import ApiRequest
+from {{ package_api_lib_module_name }}.base import BaseApi
+from {{ package_api_lib_module_name }}.request import ApiRequest
