Use valid python package name

--- a/src/swagger_codegen/templates/package_renderer/readme.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/readme.jinja2
@@ -1,20 +1,20 @@
-# {{ package_name }}
+# {{ pypi_name }}
 
 The client is provided with async and sync adapters.
 
 To install the async version with all its dependencies use:
 ```bash
-pip install {{ package_name }}[asyncio]
+pip install {{ pypi_name }}[asyncio]
 ```
 
 To install the sync version with all its dependencies use:
 ```bash
-pip install {{ package_name }}[sync]
+pip install {{ pypi_name }}[sync]
 ```
 
 To install both versions with all their dependencies use:
 ```bash
-pip install {{ package_name }}[asyncio,sync]
+pip install {{ pypi_name }}[asyncio,sync]
 ```
 
 ## Client instantiation example
