--- a/src/swagger_codegen/templates/package_renderer/setup_py.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/setup_py.jinja2
@@ -12,7 +12,7 @@ with (HERE / 'README.md').open() as f:
 # Setup
 # ----------------------------
 
-setup(name='{{ package_name }}',
+setup(name='{{ pypi_name }}',
       version='{{ package_version }}',
       description='{{ package_description }}',
       long_description=README,
