--- a/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
@@ -1,8 +1,9 @@
 from __future__ import annotations
 
-import pydantic
-import datetime
 import asyncio
+import datetime
+import json
+import pydantic
 import typing
 
 from pydantic import BaseModel
