--- a/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
+++ b/src/swagger_codegen/templates/package_renderer/endpoint_imports.jinja2
@@ -1,11 +1,10 @@
 from __future__ import annotations
 
 import pydantic
-import datetime
-import asyncio
 import typing
 
 from pydantic import BaseModel
 
 from {{ package_api_lib_module_name }}.base import BaseApi
 from {{ package_api_lib_module_name }}.request import ApiRequest
+from {{ package_api_lib_module_name }} import json
